# Parking-Lot

./: .gitignore  CMakeLists.txt  CarModel.h  IAcc.h  Idatabase.h  Parking.cpp  Parking.h  ParkingDB.accdb  acc.cpp  acc.h  acc.ui  account.cpp  account.h  admin.h  cashtransaction.cpp  cashtransaction.h  compactspot.cpp  compactspot.h  creditcardtransaction.cpp  creditcardtransaction.h  electricpanel.cpp  electricpanel.h  electricspot.cpp  electricspot.h  entrancepanel.cpp  entrancepanel.h  enums.h  exchange.cpp  exchange.h  exitingpanel.cpp  exitingpanel.h  handicappedspot.cpp  handicappedspot.h  largespot.cpp  largespot.h  main.cpp  mediumspot.cpp  mediumspot.h  motorcyclespot.cpp  motorcyclespot.h  (+25 more)
Bussiness_logic/: IExchange.h  Idatabase.h  Types.h  compactspot.cpp  compactspot.h  entrancepanel.h  exchange.cpp  exchange.h  handicappedspot.cpp  largespot.h  main.cpp  mediumspot.h  parkingfloor.cpp  parkinglot.cpp  parkinglot.h  parkingrate.cpp  parkingspot.h  parkingticket.cpp  parkingticket.h  vehicle.cpp
Class diagram/: Improved parkingUML (1).drawio
Data_layer/: ParkingLot.sqlite
Data_layer/Data_presentation/: sqlitedb.h
Data_layer/Model/: CarModel.h  model.h
Presentation_layer/: IAcc.h  acc.cpp  acc.h  simulation.cpp  view.cpp  view.h  view.ui
tests/: test.cpp  test1.cpp  test1.h
